--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -5,8 +5,6 @@
 // bower:styl
 // endbower
 
-@import url("//fonts.googleapis.com/css?family=Roboto\+Slab:400,700|Roboto:400,700,700italic,400italic")
-
 @font-face
   font-family: 'Material Icons';
   font-style: normal;
@@ -17,6 +15,18 @@
        url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
        url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
        url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+
+@font-face
+  font-family: 'Miso Light'
+  font-style: normal
+  font-weight: normal
+  src: url(../assets/fonts/miso-light/miso-light.eot?) format("eot"),
+          url(../assets/fonts/miso-light/miso-light.woff) format("woff"),
+          url(../assets/fonts/miso-light/miso-light.ttf) format("truetype"),
+          url(../assets/fonts/miso-light/miso-light.svg#Miso-Light) format("svg")
+
+.font-miso-light
+  font-family: 'Miso Light'
 
 .material-icons
   font-family: 'Material Icons';
@@ -43,7 +53,10 @@
   font-feature-settings: 'liga';
 
 html
-  font-family 'Roboto Slab', serif
+  font-family 'Microsoft YaHei UI Light' 'Microsoft YaHei UI' sans-serif
+
+body
+  background rgb(240 240 240)
 
 [layout=row]
   flex-direction row
@@ -53,30 +66,6 @@ html
   background #ccc
   color #000
   padding 0.2em 0
-
-md-toolbar
-  &.md-default-theme
-    background-color black
-
-section
-  &.jumbotron
-    margin-bottom 30px
-    padding 1px 30px
-    background-color #5aadbb
-    text-align center
-    color white
-    h1
-      font-size 3em
-
-.techs
-  display flex
-  flex-flow row wrap
-  md-card
-    width 30%
-    img
-      &.pull-right
-        float right
-        width 100px
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
