--- a/src/app/state/home/homepage/homepage.jade
+++ b/src/app/state/home/homepage/homepage.jade
@@ -1,3 +1,3 @@
 div._state_-homepage(layout='column')
-    div
-        yua-post(title='test', content='content', time='2016/05/22')
+    div(ng-repeat='post in ctrl.posts')
+        yua-post(title='{{ post.title }}', content='{{ post.content }}', time='{{ post.time }}')
