嗯，基本就这样吧

--- a/src/app/state/home/home.jade
+++ b/src/app/state/home/home.jade
@@ -16,7 +16,7 @@ div._state_home(layout-fill, layout='row', layout-align='start stretch')
             div Powered by YuaNg
             div Copyright © 2010-{{ $_YuaInfo.copyrightEndYear }}
 
-    div(flex)
+    md-content(flex)
         div.home-header(layout='row', layout-align='start end')
             div.title {{ $_YuaInfo.title }}
             div.desc(ng-if='$_YuaInfo.desc') &nbsp;-&nbsp;{{ $_YuaInfo.desc }}
