--- a/src/app/state/home/home.styl
+++ b/src/app/state/home/home.styl
@@ -30,7 +30,8 @@
     padding 10px 20px
     background rgba(255 255 255 .8)
     box-shadow 4px 0 10px rgba(0 0 0 .3)
-    position absolute
+    position fixed
+    top 0
     left 200px
     right 0
     .title
@@ -38,5 +39,5 @@
     .desc
       color #888
   .home-body
-    padding-top 50px
+    padding-top 25px
     margin 25px
