--- a/src/app/directive/yua-post/yua-post.jade
+++ b/src/app/directive/yua-post/yua-post.jade
@@ -1,10 +1,10 @@
 div._directive_-yua-post
     div.yua-post
         div.header(layout='row', layout-align='start center')
-            div.title(ng-bind-html='ctrl.title')
+            div.title(ng-bind-html='ctrl.post.title')
             div(flex)
-            div.time(ng-bind-html='ctrl.time')
+            div.time(ng-bind-html='ctrl.post.time')
         div.body
-            div.content(ng-bind-html='ctrl.content')
+            div.content(ng-bind-html='ctrl.post.content')
         //div.footer
         //    div.meta META
