--- a/src/app/directive/yua-post/yua-post.styl
+++ b/src/app/directive/yua-post/yua-post.styl
@@ -1,13 +1,49 @@
 ._directive_-yua-post
   .yua-post
-    box-shadow 1px 2px 10px rgba(0 0 0 .5)
+    box-shadow 0 0 15px rgba(0 0 0 .3)
+    border 1px solid #ccc
+    color #333
     .header
-      $header-background-color = rgba(200 160 200 .5)
+      $header-background-color = rgba(230 230 230 .8)
       padding 10px 20px
       background-color $header-background-color
       border-bottom 3px solid darken($header-background-color, 30%)
+      .title
+        font-size 1.2em
       .time
         font-family 'Miso Light'
         font-size 1.2em
     .body
       padding 15px
+
+      a
+        text-decoration none
+        color #333
+        border-bottom 1px dashed
+        margin-bottom -1px
+        transition color .3s
+        &:hover
+          color #b72620
+
+      hr
+        border none
+        border-bottom 1px solid #ccc
+
+
+      img
+        max-width 100%
+        height auto
+        padding 2px
+        box-sizing border-box
+        background #ddd
+        box-shadow 0 0 2px rgba(0 0 0 .5)
+        transition background .3s
+        &:hover
+          background #bbb
+
+      pre
+        margin 0 -15px 0 -20px
+        border-left 5px solid #54a2ff
+
+        code
+          padding 15px
