--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -53,7 +53,8 @@
   font-feature-settings: 'liga';
 
 html
-  font-family 'Microsoft YaHei UI Light' 'Microsoft YaHei UI' sans-serif
+  font-family 'Microsoft YaHei UI Light', 'Microsoft YaHei UI', sans-serif
+  font-size 14px
 
 body
   background rgb(240 240 240)
