--- a/src/app/state/home/homepage/homepage.jade
+++ b/src/app/state/home/homepage/homepage.jade
@@ -1,3 +1,3 @@
 div._state_-homepage(layout='column')
-    div(ng-repeat='post in ctrl.posts')
-        yua-post(title='{{ post.title }}', content='{{ post.content }}', time='{{ post.time }}')
+    div(ng-repeat='post in ctrl.posts', layout-margin)
+        yua-post(post='post')
