--- a/src/app/directive/yua-post/yua-post.styl
+++ b/src/app/directive/yua-post/yua-post.styl
@@ -1,15 +1,16 @@
 ._directive_-yua-post
   .yua-post
-    box-shadow 0 0 15px rgba(0 0 0 .3)
+    box-shadow 1px 2px 15px rgba(0 0 0 .3)
     border 1px solid #ccc
     color #333
     .header
-      $header-background-color = rgba(230 230 230 .8)
+      $header-background-color = rgba(230 240 250 .8)
       padding 10px 20px
       background-color $header-background-color
       border-bottom 3px solid darken($header-background-color, 30%)
       .title
-        font-size 1.2em
+        font-size 1.3em
+        font-weight bold
       .time
         font-family 'Miso Light'
         font-size 1.2em
@@ -41,9 +42,17 @@
         &:hover
           background #bbb
 
+      code
+        background #eee
+        padding 2px 3px
+        border-radius 3px
+
       pre
         margin 0 -15px 0 -20px
         border-left 5px solid #54a2ff
+        border-radius 3px 0 0 3px
 
         code
+          border-radius 0
+          background url("/assets/images/bg.gif")
           padding 15px
