--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -68,6 +68,20 @@ body
   color #000
   padding 0.2em 0
 
+::-webkit-scrollbar-track
+  //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+  background-color: #eee
+
+::-webkit-scrollbar
+  width: 4px
+  height: 10px
+  background-color: #eee
+
+::-webkit-scrollbar-thumb
+  border-radius: 10px
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3)
+  background-color: $color-gray-04
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your stylus files automatically
