--- a/src/app/state/home/home.styl
+++ b/src/app/state/home/home.styl
@@ -37,6 +37,7 @@
     .title
       font-size 1.3em
     .desc
+      font-family 'Microsoft YaHei', sans-serif
       color #888
   .home-body
     padding-top 25px
