--- a/src/app/state/home/home.jade
+++ b/src/app/state/home/home.jade
@@ -10,6 +10,10 @@ div._state_home(layout-fill, layout='row', layout-align='start stretch')
                     span.fa.fa-google-plus(aria-hidden='true')
                 md-button.md-icon-button.md-raised(ng-if='$_YuaInfo.masterTwitterLink', ng-href='{{ $_YuaInfo.masterTwitterLink }}', target='_blank', aria-label='twitter')
                     span.fa.fa-twitter(aria-hidden='true')
+        div.nav-block
+            div.nav-title 导航
+            div.nav-item
+                div 博客
         div(flex)
         div.copyright-info
             div Theme by Lialosiu
