--- a/src/app/state/home/home.styl
+++ b/src/app/state/home/home.styl
@@ -20,6 +20,19 @@
         margin 10px 0
         .md-button
           font-size 1.3em
+    .nav-block
+      margin 20px -10px 0 -20px
+      text-align right
+      .nav-title
+        font-size 1.3em
+        padding 5px 15px
+        margin 10px 0
+        transform rotate(-10deg)
+        border-bottom 1px solid #ccc
+      .nav-item
+        font-size 1.1em
+        padding 5px 15px
+        transform rotate(-10deg)
     .copyright-info
       text-align center
       font-family 'Miso Light'
