--- a/src/app/directive/yua-post/yua-post.styl
+++ b/src/app/directive/yua-post/yua-post.styl
@@ -20,7 +20,7 @@
       a
         text-decoration none
         color #333
-        border-bottom 1px dashed
+        border-bottom 1px dotted
         margin-bottom -1px
         transition color .3s
         &:hover
@@ -44,7 +44,9 @@
 
       code
         background #eee
-        padding 2px 3px
+        color #dc4e2d
+        padding 2px 5px
+        margin 0 2px
         border-radius 3px
 
       pre
@@ -56,3 +58,4 @@
           border-radius 0
           background url("/assets/images/bg.gif")
           padding 15px
+          color #555
