--- a/src/app/directive/yua-post/yua-post.styl
+++ b/src/app/directive/yua-post/yua-post.styl
@@ -19,10 +19,10 @@
 
       a
         text-decoration none
-        color #333
-        border-bottom 1px dotted
-        margin-bottom -1px
+        color #4590c6
         transition color .3s
+        font-weight bold
+        margin 0 3px
         &:hover
           color #b72620
 
