--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -11,10 +11,10 @@
   font-weight: 400;
   src: url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+          local('MaterialIcons-Regular'),
+          url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
+          url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
+          url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
 
 @font-face
   font-family: 'Miso Light'
@@ -32,7 +32,7 @@
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px; /* Preferred icon size */
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -59,6 +59,13 @@ html
 body
   background rgb(240 240 240)
 
+a
+  text-decoration none
+  color #333
+  transition color .3s
+  &:hover
+    color #b72620
+
 [layout=row]
   flex-direction row
 
@@ -69,18 +76,20 @@ body
   padding 0.2em 0
 
 ::-webkit-scrollbar-track
-  //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
-  background-color: #eee
+  background-color #eee
 
 ::-webkit-scrollbar
-  width: 4px
-  height: 10px
-  background-color: #eee
+  width 4px
+  height 8px
+  background-color #eee
 
 ::-webkit-scrollbar-thumb
-  border-radius: 10px
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3)
-  background-color: $color-gray-04
+  border-radius 3px
+  background-color #ccc
+
+*::selection
+  background-color transparent;
+  color #d5000e
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
