--- a/src/app/state/home/home.styl
+++ b/src/app/state/home/home.styl
@@ -4,7 +4,7 @@
     box-shadow 1px 2px 10px rgba(0 0 0 .3)
     padding 20px 10px
     width 200px
-    z-index 10
+    z-index 20
     .master-info
       .avatar
         width 60%
@@ -25,14 +25,19 @@
       text-align right
       .nav-title
         font-size 1.3em
-        padding 5px 15px
+        padding 5px 20px
         margin 10px 0
         transform rotate(-10deg)
         border-bottom 1px solid #ccc
       .nav-item
         font-size 1.1em
-        padding 5px 15px
+        padding 5px 20px
         transform rotate(-10deg)
+        a
+          display block
+          transition margin-right .3s
+          &:hover
+            margin-right -10px
     .copyright-info
       text-align center
       font-family 'Miso Light'
