--- a/src/app/directive/yua-post/yua-post.styl
+++ b/src/app/directive/yua-post/yua-post.styl
@@ -40,10 +40,10 @@
         transition background .3s, transform .3s, padding .3s, box-shadow .3s
         border 0 solid
         &:hover
-          background #fa806b
+          background #ffc978
           transform rotate(-1deg)
           padding 4px
-          box-shadow 0 0 10px #fa806b
+          box-shadow 0 0 10px rgba(255, 201, 120, 0.7)
 
       code
         background #eee
